--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="container footer__container">
       <div class="footer__contacts">
         <p>Design: Anastasia Ilina</p>
-        <p>Сoder: Daniyal Keshtov</p>
+        <p>Сoder: Danial Keshtov</p>
         <p>© HBCard, 2022</p>
       </div>
 
