--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Happy Birthday - сервис для создания открыток</title>
-  <link rel="stylesheet" href="style/normalize.css">
+  <link rel="stylesheet" href="./style/normalize.css">
   <link rel="stylesheet" href="style/style.css">
   <script src="./scripts/script.js" defer></script>
 </head>
