create download image

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Happy Birthday - сервис для создания открыток</title>
-  <link rel="stylesheet" href="./style/normalize.css">
+  <link rel="stylesheet" href="/style/normalize.css">
   <link rel="stylesheet" href="style/style.css">
-  <script src="./scripts/script.js" defer></script>
+  <script src="/scripts/html2canvas.min.js"></script>
+  <script src="/scripts/script.js" defer></script>
 </head>
 <body class="women">
   <header class="header">
@@ -47,6 +48,7 @@
       </div>
     </div>
   </main>
+  <p class="download">Скачать открытку</p>
 
   <footer class="footer">
     <div class="container footer__container">
