--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <main class="card">
     <div class="container card__container">
       <div class="card__wrapper">
-        <img class="card__image" src="./img/card-w-01.jpg" alt="Фон открытки">
+        <img class="card__image" src="/img/card-w-01.jpg" alt="Фон открытки">
         <p class="card__text">
           Поздравляю с днем рожденья!<br>
           Пусть будет жизнь полна веселья,<br>
@@ -48,13 +48,13 @@
       </div>
     </div>
   </main>
-  <p class="download">Скачать открытку</p>
+  <p class="download">Открыть открытку в новой вкладке</p>
 
   <footer class="footer">
     <div class="container footer__container">
       <div class="footer__contacts">
         <p>Design: Anastasia Ilina</p>
-        <p>Сoder: Danial Keshtov</p>
+        <p>Сoder: <a href="https://t.me/Danial1267" title="Страница разработчика в телеграме">Danial Keshtov</a></p>
         <p>© HBCard, 2022</p>
       </div>
 
