--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <main class="card">
     <div class="container card__container">
       <div class="card__wrapper">
-        <img class="card__image" src="/img/card-w-01.jpg" alt="Фон открытки">
+        <img class="card__image" src="./img/card-w-01.jpg" alt="Фон открытки">
         <p class="card__text">
           Поздравляю с днем рожденья!<br>
           Пусть будет жизнь полна веселья,<br>
