--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Happy Birthday - сервис для создания открыток</title>
   <link rel="stylesheet" href="/style/normalize.css">
   <link rel="stylesheet" href="style/style.css">
-  <script src="/scripts/html2canvas.min.js"></script>
-  <script src="/scripts/script.js" defer></script>
+  <script src="./scripts/html2canvas.min.js"></script>
+  <script src="./scripts/script.js" defer></script>
 </head>
 <body class="women">
   <header class="header">
