--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="container footer__container">
       <div class="footer__contacts">
         <p>Design: Anastasia Ilina</p>
-        <p>Сoder: <a href="https://t.me/Daniyal1267" title="Страница разработчика в телеграме" title="_blank">Danial Keshtov</a></p>
+        <p>Сoder: <a href="https://t.me/Daniyal1267" title="Страница разработчика в телеграме" target="_blank">Danial Keshtov</a></p>
         <p>© HBCard, 2022</p>
       </div>
 
