fix html and styles

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
     </div>
   </main>
-  <p class="download">Открыть открытку в новой вкладке</p>
+  <button class="download">Скачать открытку</button>
 
   <footer class="footer">
     <div class="container footer__container">
